feat: implement dynamic queue view, refactor list cells, and support multiple file launch
- Added a dynamic queue view that updates to reflect the current playback queue.
- Refactored duplicated ListCell implementations into a shared base class using inheritance.
- Implemented launching the application with multiple audio files passed as program arguments.
- Improved code maintainability by reducing UI duplication and centralizing shared ListCell behavior.

Signed-off-by: Ahmed <ahmedgouda03@gmail.com>